Added code to make folder selection explicit
Reversion to mbm capabilites.

--- a/GameData/BoulderCo/textureCompressor.cfg
+++ b/GameData/BoulderCo/textureCompressor.cfg
@@ -1,3 +1,11 @@
+FOLDERS
+{
+	folder = Squad/
+	folder = BoulderCo/
+	folder = KWRocketry/
+	folder = B9_Aerospace/
+}
+
 COMPRESSOR
 {
 	compress = true
@@ -25,7 +33,7 @@ OVERRIDES
 
 OVERRIDES_FOLDERS
 {
-	Squad/Flags
+	Squad/Flags/
 	{
 		compress = true
 		mipmaps = false
