Removed Alpha-Dropping. Caused issues with normalmaps.

--- a/GameData/BoulderCo/textureCompressor.cfg
+++ b/GameData/BoulderCo/textureCompressor.cfg
@@ -13,7 +13,7 @@ COMPRESSOR
 	mipmaps = true
 	mipmaps_normals = false
 	discard_alpha = false
-	discard_alpha_normals = true
+	discard_alpha_normals = false
 	scale = 1
 	scale_normals = 2
 	max_size = 0
