Moved to non-disk mbm change.
Also added item to commit changes and free memory.

--- a/GameData/BoulderCo/textureCompressor.cfg
+++ b/GameData/BoulderCo/textureCompressor.cfg
@@ -12,22 +12,33 @@ COMPRESSOR
 	compress_normals = false
 	mipmaps = true
 	mipmaps_normals = false
-	discard_alpha = false
-	discard_alpha_normals = false
 	scale = 1
 	scale_normals = 2
 	max_size = 0
 	max_size_normals = 512
+	filter_mode = Bilinear
+	make_not_readable = true
+}
+
+LEAVE_READABLE
+{
+	texture = Squad/Spaces/mk1CockpitInternal/model002
+	texture = Squad/Spaces/mk1CockpitInternal/model004
+	texture = Squad/Parts/FuelTank/RCSTank1-2/model001
+	texture = Squad/Parts/Aero/winglet2/model001
+	texture = B9_Aerospace/Parts/Structure_P_Clear-Half/model001
+	texture = B9_Aerospace/Parts/Structure_P_Standard-Frame/model001
 }
 
 OVERRIDES
 {
-	Squad/Parts/Aero/advancedCanard/model000
+	Squad/Spaces/mk1CockpitInternal/model002
 	{
 		compress = true
 		mipmaps = true
-		discard_alpha = false
 		scale = 1
+		filter_mode = Bilinear
+		make_not_readable = false
 	}
 }
 
@@ -37,7 +48,8 @@ OVERRIDES_FOLDERS
 	{
 		compress = true
 		mipmaps = false
-		discard_alpha = true
 		scale = 1
+		filtering = Bilinear
+		make_not_readable = true
 	}
 }
