added code to protect small textures

--- a/GameData/BoulderCo/textureCompressor.cfg
+++ b/GameData/BoulderCo/textureCompressor.cfg
@@ -11,7 +11,7 @@ COMPRESSOR
 	compress = true
 	compress_normals = false
 	mipmaps = true
-	mipmaps_normals = false
+	mipmaps_normals = true
 	scale = 1
 	scale_normals = 2
 	max_size = 0
