--- a/GameData/BoulderCo/textureCompressor.cfg
+++ b/GameData/BoulderCo/textureCompressor.cfg
@@ -28,6 +28,7 @@ LEAVE_READABLE
 	texture = Squad/Parts/Aero/winglet2/model001
 	texture = B9_Aerospace/Parts/Structure_P_Clear-Half/model001
 	texture = B9_Aerospace/Parts/Structure_P_Standard-Frame/model001
+	texture = BoulderCo/Clouds/Textures/bump1
 }
 
 OVERRIDES
