--- a/GameData/BoulderCo/textureCompressor.cfg
+++ b/GameData/BoulderCo/textureCompressor.cfg
@@ -12,12 +12,23 @@ COMPRESSOR
 	compress_normals = false
 	mipmaps = true
 	mipmaps_normals = true
-	scale = 1
+	scale = 2
 	scale_normals = 2
 	max_size = 0
 	max_size_normals = 512
 	filter_mode = Bilinear
 	make_not_readable = true
+}
+
+NORMAL_LIST
+{
+	texture = Squad/Spaces/mk1CockpitInternal/model002
+	texture = Squad/Spaces/mk1CockpitInternal/model004
+	texture = Squad/Parts/FuelTank/RCSTank1-2/model001
+	texture = Squad/Parts/Aero/winglet2/model001
+	texture = B9_Aerospace/Parts/Structure_P_Clear-Half/model001
+	texture = B9_Aerospace/Parts/Structure_P_Standard-Frame/model001
+	texture = BoulderCo/Clouds/Textures/bump1
 }
 
 LEAVE_READABLE
