Added more folder control

--- a/GameData/BoulderCo/textureCompressorConfigs/textureCompressor.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/textureCompressor.cfg
@@ -99,6 +99,11 @@ COMPRESSOR
 #		compress = true
 #		mipmaps = false
 #		scale = 1
+#		max_size = 0
+#		compress_normals = false
+#		mipmaps_normals = false
+#		scale_normals = 1
+#		max_size_normals = 0
 #		filtering = Bilinear
 #		make_not_readable = true
 #	}
