--- a/GameData/BoulderCo/textureCompressorConfigs/BoulderCo.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/BoulderCo.cfg
@@ -11,6 +11,7 @@ OVERRIDES
 		compress = true
 		mipmaps = true
 		scale = 1
+		max_size = 0
 		filter_mode = Bilinear
 		make_not_readable = true
 	}
