--- a/GameData/BoulderCo/textureCompressorConfigs/Squad.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/Squad.cfg
@@ -13,6 +13,7 @@ OVERRIDES_FOLDERS
 		compress = true
 		mipmaps = false
 		scale = 1
+		max_size = 0
 		filtering = Bilinear
 		make_not_readable = true
 	}
