--- a/GameData/BoulderCo/textureCompressorConfigs/JSI.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/JSI.cfg
@@ -1,9 +1,10 @@
-NORMAL_LIST
+OVERRIDES_FOLDERS
 {
-	
-}
-
-OVERRIDES
-{
-	
+	JSI/RasterPropMonitor/
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
 }
