--- a/GameData/BoulderCo/textureCompressorConfigs/WarpPlugin.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/WarpPlugin.cfg
@@ -1,9 +1,77 @@
-NORMAL_LIST
-{
-	
-}
-
 OVERRIDES
 {
-	
+	WarpPlugin/alumina_resource_point
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
+	WarpPlugin/explode
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
+	WarpPlugin/megajoule_click
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
+	WarpPlugin/resource_point
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
+	WarpPlugin/thorium_resource_point
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
+	WarpPlugin/transparent
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
+	WarpPlugin/uranium_resource_point
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
+	WarpPlugin/warp
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
+	WarpPlugin/water_resource_point
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
+}
+
+OVERRIDES_FOLDERS
+{
+	WarpPlugin/PlanetResourceData/
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
 }
