--- a/GameData/BoulderCo/textureCompressorConfigs/textureCompressor.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/textureCompressor.cfg
@@ -58,7 +58,7 @@ COMPRESSOR
 #  Section for normalmapped textures. Same as above, but
 #   apply only to normal maps.
 	compress_normals = false
-	mipmaps_normals = true
+	mipmaps_normals = false
 	scale_normals = 2
 	max_size_normals = 256
 }
