Added code to perform GC while loading.

--- a/GameData/BoulderCo/textureCompressorConfigs/textureCompressor.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/textureCompressor.cfg
@@ -11,20 +11,20 @@ COMPRESSOR
 {
 ###Section for global settings
 	
-#  Sets how the shader filters textures. Options are:
-#  	Point - No filtering is done. Pixels are sampled 
-#           directly. Results in a "pixelated" object. 
-#           Good for GUIs and other 2D applications
-#   Bilinear - Decent filter. What KSP uses by default.	
-#   Trilinear - Better filter. Sometimes difference is 
-#           negligable. Will have small negative affect
-#           on performace.
+###  Sets how the shader filters textures. Options are:
+###  	Point - No filtering is done. Pixels are sampled 
+###           directly. Results in a "pixelated" object. 
+###           Good for GUIs and other 2D applications
+###   Bilinear - Decent filter. What KSP uses by default.	
+###   Trilinear - Better filter. Sometimes difference is 
+###           negligable. Will have small negative affect
+###           on performace.
 	filter_mode = Bilinear
 
-#  Offload the texture from RAM into Graphics memory.
-#   this will mean the textures cannot be sampled by 
-#   the scripts, but saves a LOT of memory. MBMs are
-#   not readable by default.  
+###  Offload the texture from RAM into Graphics memory.
+###   this will mean the textures cannot be sampled by 
+###   the scripts, but saves a LOT of memory. MBMs are
+###   not readable by default.  
 	make_not_readable = true
 
 ###Section for non-normalmapped textures 
@@ -32,87 +32,80 @@ COMPRESSOR
 ### the file names end in _NRM, or are called out as such
 ### in the config files.
 
-#  Compression flag. Compress all textures that
-#   can be. This includes textures in packs that don't 
-#   have config files. Will reduce quality slightly.
-#   Not recomended for normal maps.
+###  Compression flag. Compress all textures that
+###   can be. This includes textures in packs that don't 
+###   have config files. Will reduce quality slightly.
+###   Not recomended for normal maps.
 	compress = true
 
-#  Generate mipmaps. Mipmaps add smaller, filtered versions
-#   of the texture for use at a distance. Adds ~30% more 
-#   memory. Well worth it on visual textures. 
+###  Generate mipmaps. Mipmaps add smaller, filtered versions
+###   of the texture for use at a distance. Adds ~30% more 
+###   memory. Well worth it on visual textures. 
 	mipmaps = true
 
-#  Resize the texture by the scale specified. Use powers
-#   of two for best efficiency. 1 is no scalling, 2, is 1/2
-#   4 is 1/4, etc.
+###  Resize the texture by the scale specified. Use powers
+###   of two for best efficiency. 1 is no scalling, 2, is 1/2
+###   4 is 1/4, etc.
 	scale = 2
 
-#  Specifies a maximum dimension for both width and height
-#   of textures, AFTER any scalling. ie. if this is set to 
-#   256, and you have a 1024X1024 texture and scale set to 2,
-#   the resulting texture will be 256x256. Use it without 
-#   scalling to only shrink larger textures. 
+###  Specifies a maximum dimension for both width and height
+###   of textures, AFTER any scalling. ie. if this is set to 
+###   256, and you have a 1024X1024 texture and scale set to 2,
+###   the resulting texture will be 256x256. Use it without 
+###   scalling to only shrink larger textures. 
 	max_size = 0
 
-#  Section for normalmapped textures. Same as above, but
-#   apply only to normal maps.
+###  Section for normalmapped textures. Same as above, but
+###   apply only to normal maps.
 	compress_normals = false
 	mipmaps_normals = false
 	scale_normals = 2
 	max_size_normals = 256
 }
 
-# Specific sections can be added in config files
-# to allow specifc behaviour. Examples shown are from
-# Squad.cfg and BoulderCo.cfg.
-#
-# Some mods don't mark normal map textures properly,
-# which can cause part errors.
-# Specify the textures to be treaded as normal maps:
-#NORMAL_LIST
-#{
-#	texture = Squad/Spaces/mk1CockpitInternal/model002
-#	texture = Squad/Spaces/mk1CockpitInternal/model004
-#	texture = Squad/Parts/FuelTank/RCSTank1-2/model001
-#	texture = Squad/Parts/Aero/winglet2/model001
-#}
-#
-#Specific file overrides:
-#OVERRIDES
-#{
-#	BoulderCo/Clouds/Textures/kerbin1
-#	{
-#		compress = true
-#		mipmaps = true
-#		scale = 1
-#		filter_mode = Bilinear
-#		make_not_readable = true
-#	}
-#}
-#
-#Override a specific folder (useful for flag/GUI folders):
-#OVERRIDES_FOLDERS
-#{
-#	Squad/Flags/
-#	{
-#		compress = true
-#		mipmaps = false
-#		scale = 1
-#		max_size = 0
-#		compress_normals = false
-#		mipmaps_normals = false
-#		scale_normals = 1
-#		max_size_normals = 0
-#		filtering = Bilinear
-#		make_not_readable = true
-#	}
-#}
-#
-#
-#
-#
-#
-#
-#
-#
+### Specific sections can be added in config files
+### to allow specifc behaviour. Examples shown are from
+### Squad.cfg and BoulderCo.cfg.
+###
+### Some mods don't mark normal map textures properly,
+### which can cause part errors.
+### Specify the textures to be treaded as normal maps:
+###NORMAL_LIST
+###{
+###	texture = Squad/Spaces/mk1CockpitInternal/model002
+###	texture = Squad/Spaces/mk1CockpitInternal/model004
+###	texture = Squad/Parts/FuelTank/RCSTank1-2/model001
+###	texture = Squad/Parts/Aero/winglet2/model001
+###}
+###
+###Specific file overrides:
+###OVERRIDES
+###{
+###	BoulderCo/Clouds/Textures/kerbin1
+###	{
+###		compress = true
+###		mipmaps = true
+###		scale = 1
+###		filter_mode = Bilinear
+###		make_not_readable = true
+###	}
+###}
+###
+###Override a specific folder (useful for flag/GUI folders):
+###OVERRIDES_FOLDERS
+###{
+###	Squad/Flags/
+###	{
+###		compress = true
+###		mipmaps = false
+###		scale = 1
+###		max_size = 0
+###		compress_normals = false
+###		mipmaps_normals = false
+###		scale_normals = 1
+###		max_size_normals = 0
+###		filtering = Bilinear
+###		make_not_readable = true
+###	}
+###}
+##
