--- a/GameData/BoulderCo/textureCompressorConfigs/Squad.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/Squad.cfg
@@ -8,6 +8,14 @@ NORMAL_LIST
 
 OVERRIDES_FOLDERS
 {
+	Squad/Props/
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
+	
 	Squad/Flags/
 	{
 		compress = true
