fixed warpplugin values.

--- a/GameData/BoulderCo/textureCompressorConfigs/WarpPlugin.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/WarpPlugin.cfg
@@ -69,9 +69,10 @@ OVERRIDES_FOLDERS
 {
 	WarpPlugin/PlanetResourceData/
 	{
-		compress = true
+		compress = false
 		mipmaps = false
 		scale = 1
 		max_size = 0
+		make_not_readable = false
 	}
 }
