Lots of updates... See extended.
Fixed mipmap setting for normalmaps.
Added enable option in configs.
Moved to regex config parsing.
Due to regex parsing, merged folder and specific texture parsing.
Updated config files to match.

--- a/GameData/BoulderCo/textureCompressorConfigs/000_Toolbar.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/000_Toolbar.cfg
@@ -1,16 +1,7 @@
-NORMAL_LIST
-{
-	
-}
-
+enabled = true
 OVERRIDES
 {
-	
-}
-
-OVERRIDES_FOLDERS
-{
-	000_Toolbar/
+	000_Toolbar/.*
 	{
 		compress = true
 		mipmaps = false
