--- a/GameData/BoulderCo/textureCompressorConfigs/BobCatind.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/BobCatind.cfg
@@ -1,3 +1,4 @@
+enabled = true
 NORMAL_LIST
 {
 	texture = BobCatind/Parts/SovietPack/ISS_TKS_FGB/model001
@@ -12,9 +13,4 @@ NORMAL_LIST
 	texture = BobCatind/Parts/SovietPack/MIR_soviet_dockport_cap/model001
 	texture = BobCatind/Parts/SovietPack/MIR_soviet_dockport_papa/model001
 	texture = BobCatind/Spaces/MIR_core_internal/model001
-}
-
-OVERRIDES
-{
-	
 }
