--- a/GameData/BoulderCo/textureCompressorConfigs/ISS_Comunity.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/ISS_Comunity.cfg
@@ -1,3 +1,4 @@
+enabled = true
 NORMAL_LIST
 {
 	texture = ISS_Comunity/Parts/ISS_CBM_dockport/model001
@@ -17,9 +18,4 @@ NORMAL_LIST
 	texture = ISS_Comunity/Parts/ISS_Truss_S1_P1/model003
 	texture = ISS_Comunity/Parts/ISS_Truss_S3_P3/model001
 	texture = ISS_Comunity/Parts/ISS_Truss_S3_P3/model003
-}
-
-OVERRIDES
-{
-	
 }
