--- a/GameData/BoulderCo/textureCompressorConfigs/JSI.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/JSI.cfg
@@ -1,10 +1,12 @@
-OVERRIDES_FOLDERS
+enabled = true
+OVERRIDES
 {
-	JSI/RasterPropMonitor/
+	JSI/RasterPropMonitor/.*
 	{
 		compress = true
 		mipmaps = false
 		scale = 1
 		max_size = 0
+		make_not_readable = false
 	}
 }
