--- a/GameData/BoulderCo/textureCompressorConfigs/NovaPunch2.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/NovaPunch2.cfg
@@ -1,3 +1,4 @@
+enabled = true
 NORMAL_LIST
 {
 	texture = NovaPunch2/Parts/CouplersAndAdapters/NP_interstage_1_25m_2_5m_tank/model001
@@ -68,19 +69,4 @@ NORMAL_LIST
 	texture = NovaPunch2/Parts/SolidBoosters/NP_SRB_2_5m_Short/model003
 	texture = NovaPunch2/Parts/Thor/NP_ThorLanderStrut2/model001
 	texture = NovaPunch2/Parts/Thor/NP_ThorLanderStrut3/model001
-}
-
-LEAVE_READABLE
-{
-
-}
-
-OVERRIDES
-{
-	
-}
-
-OVERRIDES_FOLDERS
-{
-	
 }
