--- a/GameData/BoulderCo/textureCompressorConfigs/TriggerTech.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/TriggerTech.cfg
@@ -1,11 +1,7 @@
-NORMAL_LIST
+enabled = true
+OVERRIDES
 {
-	
-}
-
-OVERRIDES_FOLDERS
-{
-	TriggerTech/
+	TriggerTech/.*
 	{
 		compress = true
 		mipmaps = false
