--- a/TextureCompressor/TextureCompressor.csproj
+++ b/TextureCompressor/TextureCompressor.csproj
@@ -54,7 +54,7 @@
   <ItemGroup>
     <Compile Include="TextureCompressor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextureResizer.cs" />
+    <Compile Include="TextureConverter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
