--- a/GameData/BoulderCo/textureCompressorConfigs/LLL.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/LLL.cfg
@@ -1,20 +1,6 @@
+enabled = true
 NORMAL_LIST
 {
 	texture = LLL/Parts/Structural/LLLWindowCircularWalkway/model001
 	texture = LLL/Parts/Structural/LLL2x1Hull/HullNorm
-}
-
-LEAVE_READABLE
-{
-
-}
-
-OVERRIDES
-{
-	
-}
-
-OVERRIDES_FOLDERS
-{
-	
 }
