--- a/GameData/BoulderCo/textureCompressorConfigs/Squad.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/Squad.cfg
@@ -1,26 +1,8 @@
+enabled = true
 NORMAL_LIST
 {
 	texture = Squad/Spaces/mk1CockpitInternal/model002
 	texture = Squad/Spaces/mk1CockpitInternal/model004
 	texture = Squad/Parts/FuelTank/RCSTank1-2/model001
 	texture = Squad/Parts/Aero/winglet2/model001
-}
-
-OVERRIDES_FOLDERS
-{
-	Squad/Props/
-	{
-		compress = true
-		mipmaps = false
-		scale = 1
-		max_size = 0
-	}
-	
-	Squad/Flags/
-	{
-		compress = true
-		mipmaps = false
-		scale = 1
-		max_size = 0
-	}
 }
