--- a/GameData/BoulderCo/textureCompressorConfigs/textureCompressor.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/textureCompressor.cfg
@@ -63,6 +63,25 @@ COMPRESSOR
 	max_size_normals = 256
 }
 
+OVERRIDES
+{
+	.*/Props/.*
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
+	
+	.*/Flags/.*
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
+	}
+}
+
 ### Specific sections can be added in config files
 ### to allow specifc behaviour. Examples shown are from
 ### Squad.cfg and BoulderCo.cfg.
@@ -78,23 +97,11 @@ COMPRESSOR
 ###	texture = Squad/Parts/Aero/winglet2/model001
 ###}
 ###
-###Specific file overrides:
+### Override a specific file/folder using regexes(useful for flag/GUI folders)
+### If any of the fields are ommitted, it is replaced by the global settings:
 ###OVERRIDES
 ###{
-###	BoulderCo/Clouds/Textures/kerbin1
-###	{
-###		compress = true
-###		mipmaps = true
-###		scale = 1
-###		filter_mode = Bilinear
-###		make_not_readable = true
-###	}
-###}
-###
-###Override a specific folder (useful for flag/GUI folders):
-###OVERRIDES_FOLDERS
-###{
-###	Squad/Flags/
+###	.*/Flags/.*
 ###	{
 ###		compress = true
 ###		mipmaps = false
