--- a/TextureCompressor/TextureCompressor.csproj
+++ b/TextureCompressor/TextureCompressor.csproj
@@ -52,6 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CacheController.cs" />
     <Compile Include="TextureCompressor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextureConverter.cs" />
