Adding textures before load to speed up.

--- a/GameData/BoulderCo/textureCompressorConfigs/textureCompressor.cfg
+++ b/GameData/BoulderCo/textureCompressorConfigs/textureCompressor.cfg
@@ -7,7 +7,7 @@
 ###  config file for examples. In-depth settings and 
 ###  example overrides can be found below.
 ###
-COMPRESSOR
+TEXTURE_MANAGER
 {
 ###Section for global settings
 	
@@ -61,7 +61,6 @@ COMPRESSOR
 	mipmaps_normals = false
 	scale_normals = 2
 	max_size_normals = 256
-}
 
 OVERRIDES
 {
@@ -116,3 +115,6 @@ OVERRIDES
 ###	}
 ###}
 ##
+
+}
+
