--- a/GameData/ActiveTextureManagement/textureCompressor.cfg
+++ b/GameData/ActiveTextureManagement/textureCompressor.cfg
@@ -7,7 +7,7 @@
 ###  config file for examples. In-depth settings and 
 ###  example overrides can be found below.
 ###
-TEXTURE_MANAGER
+ACTIVE_TEXTURE_MANAGER
 {
 
 DBG = TRUE
