--- a/GameData/BoulderCo/ActiveTextureManagerConfigs/FASA.cfg
+++ b/GameData/BoulderCo/ActiveTextureManagerConfigs/FASA.cfg
@@ -1,7 +1,7 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
 	folder = FASA
-	config_enabled = true
+	enabled  = true
 	NORMAL_LIST
 	{
 		texture = FASA/Gemini2/FASA_Gemini_Lander_Eng/model001
