--- a/GameData/BoulderCo/ActiveTextureManagerConfigs/JSI.cfg
+++ b/GameData/BoulderCo/ActiveTextureManagerConfigs/JSI.cfg
@@ -1,7 +1,7 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
 	folder = JSI
-	config_enabled = true
+	enabled  = true
 	OVERRIDES
 	{
 		JSI/RasterPropMonitor/.*
