--- a/GameData/BoulderCo/ActiveTextureManagerConfigs/Squad.cfg
+++ b/GameData/BoulderCo/ActiveTextureManagerConfigs/Squad.cfg
@@ -1,7 +1,7 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
 	folder = Squad
-	config_enabled = true
+	enabled  = true
 	NORMAL_LIST
 	{
 		texture = Squad/Spaces/mk1CockpitInternal/model002
