--- a/GameData/BoulderCo/ActiveTextureManagerConfigs/WarpPlugin.cfg
+++ b/GameData/BoulderCo/ActiveTextureManagerConfigs/WarpPlugin.cfg
@@ -1,7 +1,7 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
 	folder = WarpPlugin
-	config_enabled = true
+	enabled  = true
 	OVERRIDES
 	{
 		WarpPlugin/[^/]*
