--- a/GameData/BoulderCo/ActiveTextureManagerConfigs/B9_Aerospace.cfg
+++ b/GameData/BoulderCo/ActiveTextureManagerConfigs/B9_Aerospace.cfg
@@ -1,7 +1,7 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
 	folder = B9_Aerospace
-	config_enabled = true
+	enabled  = true
 	NORMAL_LIST
 	{
 		texture = B9_Aerospace/Parts/Structure_P_Clear-Half/model001
