--- a/GameData/BoulderCo/ActiveTextureManagerConfigs/BoulderCo.cfg
+++ b/GameData/BoulderCo/ActiveTextureManagerConfigs/BoulderCo.cfg
@@ -1,7 +1,7 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
 	folder = BoulderCo
-	config_enabled = true
+	enabled  = true
 	OVERRIDES
 	{
 		BoulderCo/Clouds/.*
