Binaries update, removed debugging from log

--- a/GameData/ActiveTextureManagement/config.cfg
+++ b/GameData/ActiveTextureManagement/config.cfg
@@ -10,7 +10,7 @@
 ACTIVE_TEXTURE_MANAGER
 {
 
-DBG = TRUE
+###DBG = TRUE
 ###Section for global settings
 	
 ###  Sets how the shader filters textures. Options are:
