re-added mipmaps

--- a/GameData/ActiveTextureManagement/config.cfg
+++ b/GameData/ActiveTextureManagement/config.cfg
@@ -60,7 +60,7 @@ ACTIVE_TEXTURE_MANAGER
 ###  Section for normalmapped textures. Same as above, but
 ###   apply only to normal maps.
 	compress_normals = false
-	mipmaps_normals = false
+	mipmaps_normals = true
 	scale_normals = 2
 	max_size_normals = 256
 
