added more config alterations from GreenSkull

--- a/GameData/BoulderCo/ActiveTextureManagerConfigs/SCANsat.cfg
+++ b/GameData/BoulderCo/ActiveTextureManagerConfigs/SCANsat.cfg
@@ -1,5 +1,15 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-	folder = SCANsat
-	enabled  = true
+folder = SCANsat
+enabled = true
+OVERRIDES
+{
+SCANsat/SCANsat_Icon
+{
+compress = true
+mipmaps = false
+scale = 1
+max_size = 0
+}
+}
 }
