--- a/GameData/BoulderCo/ActiveTextureManagerConfigs/BoulderCo.cfg
+++ b/GameData/BoulderCo/ActiveTextureManagerConfigs/BoulderCo.cfg
@@ -4,7 +4,7 @@ ACTIVE_TEXTURE_MANAGER_CONFIG
 	enabled  = true
 	OVERRIDES
 	{
-		BoulderCo/Clouds/.*
+		BoulderCo/(Clouds|Atmosphere)/.*
 		{
 			compress = true
 			mipmaps = true
