--- a/ActiveTextureManagement/ActiveTextureManagement.csproj
+++ b/ActiveTextureManagement/ActiveTextureManagement.csproj
@@ -90,7 +90,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y $(TargetFileName) "$(SolutionDir)GameData\EnvironmentalVisualEnhancements\Plugins\"
+    <PostBuildEvent>copy /Y $(TargetFileName) "$(SolutionDir)GameData\ActiveTextureManagement\Plugins\"
 xcopy "$(SolutionDir)GameData" "C:\Users\Ryan\Documents\ksp-$(PlatformName)-0-24-0\KSP_win_dev\GameData" /e /y /i /r
 7za a -tzip "$(SolutionDir)$(PlatformName)-Release.zip" "$(SolutionDir)GameData"</PostBuildEvent>
   </PropertyGroup>
