--- a/GameData/BoulderCo/ActiveTextureManagerConfigs/Squad.cfg
+++ b/GameData/BoulderCo/ActiveTextureManagerConfigs/Squad.cfg
@@ -9,4 +9,13 @@ ACTIVE_TEXTURE_MANAGER_CONFIG
 		texture = Squad/Parts/FuelTank/RCSTank1-2/model001
 		texture = Squad/Parts/Aero/winglet2/model001
 	}
+
+	Squad/Agencies/.*
+	{
+		compress = false
+		mipmaps = false
+		scale = 1
+		max_size = 0
+		make_not_readable = false
+	}
 }
