--- a/GameData/BoulderCo/ActiveTextureManagerConfigs/BoulderCo.cfg
+++ b/GameData/BoulderCo/ActiveTextureManagerConfigs/BoulderCo.cfg
@@ -4,7 +4,15 @@ ACTIVE_TEXTURE_MANAGER_CONFIG
 	enabled  = true
 	OVERRIDES
 	{
-		BoulderCo/(Clouds|Atmosphere)/.*
+		BoulderCo/Clouds/.*
+		{
+			compress = true
+			mipmaps = true
+			scale = 1
+			max_size = 0
+			make_not_readable = false
+		}
+		BoulderCo/Atmosphere/.*
 		{
 			compress = true
 			mipmaps = true
