Added license, fixed squad, updated B9

--- a/GameData/BoulderCo/ActiveTextureManagerConfigs/Squad.cfg
+++ b/GameData/BoulderCo/ActiveTextureManagerConfigs/Squad.cfg
@@ -9,13 +9,15 @@ ACTIVE_TEXTURE_MANAGER_CONFIG
 		texture = Squad/Parts/FuelTank/RCSTank1-2/model001
 		texture = Squad/Parts/Aero/winglet2/model001
 	}
-
-	Squad/Agencies/.*
+	OVERRIDES
 	{
-		compress = false
-		mipmaps = false
-		scale = 1
-		max_size = 0
-		make_not_readable = false
+		Squad/Agencies/.*
+		{
+			compress = false
+			mipmaps = false
+			scale = 1
+			max_size = 0
+			make_not_readable = false
+		}
 	}
 }
