added support for min-size

--- a/GameData/ActiveTextureManagement/config.cfg
+++ b/GameData/ActiveTextureManagement/config.cfg
@@ -56,6 +56,7 @@ ACTIVE_TEXTURE_MANAGER
 ###   the resulting texture will be 256x256. Use it without 
 ###   scalling to only shrink larger textures. 
 	max_size = 0
+	min_size = 64
 
 ###  Section for normalmapped textures. Same as above, but
 ###   apply only to normal maps.
@@ -63,6 +64,7 @@ ACTIVE_TEXTURE_MANAGER
 	mipmaps_normals = true
 	scale_normals = 2
 	max_size_normals = 256
+	min_size_normals = 64
 
 OVERRIDES
 {
