--- a/ActiveTextureManagement/ActiveTextureManagement.csproj
+++ b/ActiveTextureManagement/ActiveTextureManagement.csproj
@@ -99,9 +99,13 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y $(TargetFileName) "$(SolutionDir)GameData\ActiveTextureManagement\Plugins\"
+    <PostBuildEvent>copy /Y $(TargetFileName) "$(SolutionDir)Plugin\GameData\ActiveTextureManagement\Plugins\"
+xcopy "$(SolutionDir)Plugin\GameData" "$(SolutionDir)GameData" /e /y /i /r
+xcopy "$(SolutionDir)Content\aggressive\GameData" "$(SolutionDir)GameData"  /e /y /i /r
 xcopy "$(SolutionDir)GameData" "C:\Users\Ryan\Documents\ksp\ksp-$(PlatformName)-0-25\GameData" /e /y /i /r
-7za a -tzip "$(SolutionDir)$(PlatformName)-Release.zip" "$(SolutionDir)GameData"</PostBuildEvent>
+7za a -tzip "$(SolutionDir)$(PlatformName)-Release.zip" "$(SolutionDir)Plugin\GameData"
+7za a -tzip "$(SolutionDir)Config-Aggressive.zip" "$(SolutionDir)Content\aggressive\GameData"
+7za a -tzip "$(SolutionDir)Config-Basic.zip" "$(SolutionDir)Content\basic\GameData"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>copy /Y "$(SolutionDir)KSPResources\$(PlatformName)\*.dll" "$(SolutionDir)KSPResources"</PreBuildEvent>
