--- a/ActiveTextureManagement/ActiveTextureManagement.csproj
+++ b/ActiveTextureManagement/ActiveTextureManagement.csproj
@@ -99,16 +99,14 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y $(TargetFileName) "$(SolutionDir)Plugin\GameData\ActiveTextureManagement\Plugins\"
-xcopy "$(SolutionDir)Plugin\GameData" "$(SolutionDir)GameData" /e /y /i /r
-xcopy "$(SolutionDir)Content\aggressive\GameData" "$(SolutionDir)GameData"  /e /y /i /r
-xcopy "$(SolutionDir)GameData" "C:\Users\Ryan\Documents\ksp\ksp-$(PlatformName)-0-25\GameData" /e /y /i /r
-7za a -tzip "$(SolutionDir)$(PlatformName)-Release.zip" "$(SolutionDir)Plugin\GameData"
-xcopy "$(SolutionDir)Content\common\GameData" "$(SolutionDir)Content\pack\GameData"  /e /y /i /r
-xcopy "$(SolutionDir)Content\aggressive\GameData" "$(SolutionDir)Content\pack\GameData"  /e /y /i /r
-7za a -tzip "$(SolutionDir)Config-Aggressive.zip" "$(SolutionDir)Content\pack\GameData"
-xcopy "$(SolutionDir)Content\basic\GameData" "$(SolutionDir)Content\pack\GameData"  /e /y /i /r
-7za a -tzip "$(SolutionDir)Config-Basic.zip" "$(SolutionDir)Content\pack\GameData"</PostBuildEvent>
+    <PostBuildEvent>xcopy  $(TargetFileName) "$(SolutionDir)Pack\GameData\ActiveTextureManagement\Plugins\" /e /y /i /r
+xcopy "$(SolutionDir)Plugin\GameData" "$(SolutionDir)Pack" /e /y /i /r
+xcopy "$(SolutionDir)Content\aggressive\GameData" "$(SolutionDir)Pack"  /e /y /i /r
+xcopy "$(SolutionDir)Content\common\GameData" "$(SolutionDir)Pack"  /e /y /i /r
+xcopy "$(SolutionDir)Pack\GameData" "C:\Users\Ryan\Documents\ksp\ksp-$(PlatformName)-0-25\GameData" /e /y /i /r
+7za a -tzip "$(SolutionDir)$(PlatformName)-Aggressive-Release.zip" "$(SolutionDir)Pack"
+xcopy "$(SolutionDir)Content\aggressive\GameData" "$(SolutionDir)Pack"  /e /y /i /r
+7za a -tzip "$(SolutionDir)$(PlatformName)-Basic-Release.zip" "$(SolutionDir)Pack"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>copy /Y "$(SolutionDir)KSPResources\$(PlatformName)\*.dll" "$(SolutionDir)KSPResources"</PreBuildEvent>
