--- a/ActiveTextureManagement/ActiveTextureManagement.csproj
+++ b/ActiveTextureManagement/ActiveTextureManagement.csproj
@@ -100,13 +100,12 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy  $(TargetFileName) "$(SolutionDir)Pack\GameData\ActiveTextureManagement\Plugins\" /e /y /i /r
-xcopy "$(SolutionDir)Plugin\GameData" "$(SolutionDir)Pack" /e /y /i /r
-xcopy "$(SolutionDir)Content\aggressive\GameData" "$(SolutionDir)Pack"  /e /y /i /r
-xcopy "$(SolutionDir)Content\common\GameData" "$(SolutionDir)Pack"  /e /y /i /r
+xcopy "$(SolutionDir)Content\aggressive\GameData\*" "$(SolutionDir)Pack\GameData\"  /e /y /i /r
+xcopy "$(SolutionDir)Content\common\GameData\*" "$(SolutionDir)Pack\GameData"  /e /y /i /r
 xcopy "$(SolutionDir)Pack\GameData" "C:\Users\Ryan\Documents\ksp\ksp-$(PlatformName)-0-25\GameData" /e /y /i /r
-7za a -tzip "$(SolutionDir)$(PlatformName)-Aggressive-Release.zip" "$(SolutionDir)Pack"
-xcopy "$(SolutionDir)Content\aggressive\GameData" "$(SolutionDir)Pack"  /e /y /i /r
-7za a -tzip "$(SolutionDir)$(PlatformName)-Basic-Release.zip" "$(SolutionDir)Pack"</PostBuildEvent>
+7za a -tzip "$(SolutionDir)$(PlatformName)-Aggressive-Release.zip" "$(SolutionDir)Pack\GameData"
+xcopy "$(SolutionDir)Content\basic\GameData\*" "$(SolutionDir)Pack\GameData"  /e /y /i /r
+7za a -tzip "$(SolutionDir)$(PlatformName)-Basic-Release.zip" "$(SolutionDir)Pack\GameData"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>copy /Y "$(SolutionDir)KSPResources\$(PlatformName)\*.dll" "$(SolutionDir)KSPResources"</PreBuildEvent>
