--- a/NvidiaTextureTools/NvidiaTextureTools.csproj
+++ b/NvidiaTextureTools/NvidiaTextureTools.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6EAA2286-2B54-4445-B553-78B67F497BA9}</ProjectGuid>
+    <ProjectGuid>{CE10BC3F-C9A4-480A-9E67-FBAEA76B2671}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LibSquishPort</RootNamespace>
-    <AssemblyName>LibSquishPort</AssemblyName>
+    <RootNamespace>NvidiaTextureTools</RootNamespace>
+    <AssemblyName>NvidiaTextureTools</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -39,7 +38,6 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -58,7 +56,6 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
@@ -84,16 +81,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="alpha.cs" />
-    <Compile Include="clusterfit.cs" />
-    <Compile Include="colorblock.cs" />
-    <Compile Include="colorfit.cs" />
-    <Compile Include="colourset.cs" />
-    <Compile Include="math.cs" />
-    <Compile Include="rangefit.cs" />
-    <Compile Include="singlecolourfit.cs" />
-    <Compile Include="squish.cs" />
+    <Compile Include="Color16.cs" />
+    <Compile Include="ColorBlock.cs" />
+    <Compile Include="DXT.cs" />
+    <Compile Include="Fitting.cs" />
+    <Compile Include="OptimalCompress.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuickCompress.cs" />
+    <Compile Include="Tex2dxt.cs" />
+    <Compile Include="TextureTools.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
