Allowing for uncompressed textures.

--- a/Content/aggressive/GameData/BoulderCo/ActiveTextureManagerConfig.cfg
+++ b/Content/aggressive/GameData/BoulderCo/ActiveTextureManagerConfig.cfg
@@ -60,7 +60,7 @@ DBG = TRUE
 
 ###  Section for normalmapped textures. Same as above, but
 ###   apply only to normal maps.
-	compress_normals = false
+	compress_normals = true
 	mipmaps_normals = true
 	scale_normals = 2
 	max_size_normals = 256
