--- a/Content/aggressive/GameData/ActiveTextureManagement/ActiveTextureManagerConfig.cfg
+++ b/Content/aggressive/GameData/ActiveTextureManagement/ActiveTextureManagerConfig.cfg
@@ -10,7 +10,7 @@
 ACTIVE_TEXTURE_MANAGER
 {
 
-DBG = TRUE
+###DBG = TRUE
 ###Section for global settings
 	
 ###  Sets how the shader filters textures. Options are:
