Added override to not rescale UI toolbar texture.

--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/DeadlyReentry.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/DeadlyReentry.cfg
@@ -2,4 +2,14 @@ ACTIVE_TEXTURE_MANAGER_CONFIG
 {
 	folder = DeadlyReentry
 	enabled  = true
+	OVERRIDES
+	{
+		DeadlyReentry/Assets/.*
+		{
+			compress = true
+			mipmaps = true
+			scale = 1
+			max_size = 0
+		}
+	}
 }
