added & changed configs
- preserve textures in /Icons/* folders
- exceptions for some other Toolbar Icons
- added Deadly Reentry normals
- some formatting and a typo

--- a/Content/basic/GameData/ActiveTextureManagement/ActiveTextureManagerConfig.cfg
+++ b/Content/basic/GameData/ActiveTextureManagement/ActiveTextureManagerConfig.cfg
@@ -46,7 +46,7 @@ ACTIVE_TEXTURE_MANAGER
 	mipmaps = true
 
 ###  Resize the texture by the scale specified. Use powers
-###   of two for best efficiency. 1 is no scalling, 2, is 1/2
+###   of two for best efficiency. 1 is no scalling, 2 is 1/2
 ###   4 is 1/4, etc.
 	scale = 1
 
@@ -74,7 +74,6 @@ OVERRIDES
 		scale = 1
 		max_size = 0
 	}
-	
 	.*/Flags/.*
 	{
 		compress = true
@@ -89,6 +88,13 @@ OVERRIDES
 		scale = 1
 		max_size = 0
 		make_not_readable = false
+	}
+	.*/Icons/.*
+	{
+		compress = true
+		mipmaps = false
+		scale = 1
+		max_size = 0
 	}
 }
 
