--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/ConnectedLivingSpace.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/ConnectedLivingSpace.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-	folder = TriggerTech
+	folder = ConnectedLivingSpace
 	enabled = true
 	OVERRIDES
-	{
-		TriggerTech/.*
+		{
+		ConnectedLivingSpace/assets/.*
 		{
 			compress = true
 			mipmaps = false
