--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/CustomBiomes.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/CustomBiomes.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-	folder = TriggerTech
+	folder = CustomBiomes
 	enabled = true
 	OVERRIDES
 	{
-		TriggerTech/.*
+		CustomBiomes/.*
 		{
 			compress = true
 			mipmaps = false
