--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/DeadlyReentry.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/DeadlyReentry.cfg
@@ -1,13 +1,19 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
 	folder = DeadlyReentry
-	enabled  = true
+	enabled = true
+	NORMAL_LIST
+	{
+	texture = DeadlyReentry/Parts/deadlyReentry_1.25Heatshield/model001
+	texture = DeadlyReentry/Parts/deadlyReentry_3.75Heatshield/model001
+	texture = DeadlyReentry/Parts/deadlyReentry_6.25Heatshield/model001
+	}
 	OVERRIDES
 	{
 		DeadlyReentry/Assets/.*
 		{
 			compress = true
-			mipmaps = true
+			mipmaps = false
 			scale = 1
 			max_size = 0
 		}
