--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/Fusebox.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/Fusebox.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-	folder = TriggerTech
+	folder = Fusebox
 	enabled = true
 	OVERRIDES
 	{
-		TriggerTech/.*
+		Fusebox/TB_icons/.*
 		{
 			compress = true
 			mipmaps = false
