--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/KerbalConstructionTime.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/KerbalConstructionTime.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-	folder = TriggerTech
+	folder = KerbalConstructionTime
 	enabled = true
 	OVERRIDES
 	{
-		TriggerTech/.*
+		KerbalConstructionTime/icons/.*
 		{
 			compress = true
 			mipmaps = false
