--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/KerbalEngineer.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/KerbalEngineer.cfg
@@ -1,13 +1,13 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
 	folder = KerbalEngineer
-	enabled  = true
+	enabled = true
 	OVERRIDES
 	{
 		KerbalEngineer/Textures/.*
 		{
 			compress = true
-			mipmaps = true
+			mipmaps = false
 			scale = 1
 			max_size = 0
 		}
