--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/KronalUtils.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/KronalUtils.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-	folder = TriggerTech
+	folder = KronalUtils
 	enabled = true
 	OVERRIDES
-	{
-		TriggerTech/.*
+		{
+		KronalUtils/Textures/.*
 		{
 			compress = true
 			mipmaps = false
