--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/RealChute.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/RealChute.cfg
@@ -1,5 +1,15 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
 	folder = RealChute
-	enabled  = true
+	enabled = true
+	OVERRIDES
+	{
+		RealChute/Plugins/PluginData/.*
+		{
+			compress = true
+			mipmaps = false
+			scale = 1
+			max_size = 0
+		}
+	}
 }
