--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/000_Toolbar.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/000_Toolbar.cfg
@@ -7,7 +7,7 @@ ACTIVE_TEXTURE_MANAGER_CONFIG
 		000_Toolbar/.*
 		{
 			compress = true
-			mipmaps = true
+			mipmaps = false
 			scale = 1
 			max_size = 0
 		}
