--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/FerramAerospaceResearch.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/FerramAerospaceResearch.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-	folder = TriggerTech
+	folder = FerramAerospaceResearch
 	enabled = true
 	OVERRIDES
 	{
-		TriggerTech/.*
+		FerramAerospaceResearch/Textures/.*
 		{
 			compress = true
 			mipmaps = false
