--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/NearFutureTechnologies.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/NearFutureTechnologies.cfg
@@ -3,6 +3,7 @@ ACTIVE_TEXTURE_MANAGER_CONFIG
 	folder = NearFutureElectrical
 	folder = NearFutureSpacecraft
 	folder = NearFutureProps
+	folder = NearFuturePropulsion
 	folder = NearFutureConstruction
 	enabled  = true
 }
