--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/NearFutureTechnologies.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/NearFutureTechnologies.cfg
@@ -1,9 +1,25 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
 	folder = NearFutureElectrical
-	folder = NearFutureSpacecraft
-	folder = NearFutureProps
-	folder = NearFuturePropulsion
+	enabled  = true
+}
+ACTIVE_TEXTURE_MANAGER_CONFIG
+{
 	folder = NearFutureConstruction
+	enabled  = true
+}
+ACTIVE_TEXTURE_MANAGER_CONFIG
+{
+	folder = NearFutureSpacecraft
+	enabled  = true
+}
+ACTIVE_TEXTURE_MANAGER_CONFIG
+{
+	folder = NearFutureProps
+	enabled  = true
+}
+ACTIVE_TEXTURE_MANAGER_CONFIG
+{
+	folder = NearFuturePropulsion
 	enabled  = true
 }
