Fix mipmapping of many icons
This adds or modifies configuration files to suppress mipmapping of
icons on 18 mods. Many of these only go blurry if KSP's texture quality
is set to half-size not full-size.

--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/BetterTimeWarp.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/BetterTimeWarp.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = BetterTimeWarp
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+BetterTimeWarp/Icons/.*
 {
 compress = true
 mipmaps = false
