--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/DiazoHorizVert.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/DiazoHorizVert.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = Diazo
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+Diazo/.*/.*
 {
 compress = true
 mipmaps = false
