--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/FilterExtensions.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/FilterExtensions.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = 000_FilterExtensions
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+000_FilterExtensions/Icons/.*
 {
 compress = true
 mipmaps = false
