--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/MechJeb2.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/MechJeb2.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = MechJeb2
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+MechJeb2/Icons/.*
 {
 compress = true
 mipmaps = false
