--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/NavyFishDPAI.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/NavyFishDPAI.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = NavyFish
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+NavyFish/Plugins/ToolbarIcons/.*
 {
 compress = true
 mipmaps = false
