--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/PlanetShine.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/PlanetShine.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = PlanetShine
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+PlanetShine/Icons/.*
 {
 compress = true
 mipmaps = false
