--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/Sentinel.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/Sentinel.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = KSEA
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+KSEA/Sentinel/Textures/.*
 {
 compress = true
 mipmaps = false
