--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/ShipManifest.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/ShipManifest.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = ShipManifest
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+ShipManifest/Images/.*
 {
 compress = true
 mipmaps = false
