--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/SwitchVessel.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/SwitchVessel.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = SwitchVessel
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+SwitchVessel/*.png
 {
 compress = true
 mipmaps = false
