--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/ThunderAerospaceTACLS.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/ThunderAerospaceTACLS.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = ThunderAerospace/TacLifeSupport
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+ThunderAerospace/TacLifeSupport/Textures/.*
 {
 compress = true
 mipmaps = false
