--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/WaypointManager.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/WaypointManager.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = WaypointManager
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+WaypointManager/icons/.*
 {
 compress = true
 mipmaps = false
