--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/FerramAerospaceResearch.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/FerramAerospaceResearch.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = FerramAerospaceResearch
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+FerramAerospaceResearch/Textures/.*
 {
 compress = true
 mipmaps = false
