--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/NavHud.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/NavHud.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = NavHud
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+NavHud/*.png
 {
 compress = true
 mipmaps = false
