--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/RavienCritTempGauge.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/RavienCritTempGauge.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = Ravien
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+Ravien/Textures/.*
 {
 compress = true
 mipmaps = false
