--- a/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/kOS.cfg
+++ b/Content/common/GameData/ActiveTextureManagement/ActiveTextureManagerConfigs/kOS.cfg
@@ -1,10 +1,10 @@
 ACTIVE_TEXTURE_MANAGER_CONFIG
 {
-folder = RealChute
+folder = kOS
 enabled = true
 OVERRIDES
 {
-RealChute/Plugins/PluginData/.*
+kOS/GFX/.*
 {
 compress = true
 mipmaps = false
